--- a/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
+++ b/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Object\Gimmick\GoalPoint.cpp" />
     <ClCompile Include="Object\Stage\Block.cpp" />
     <ClCompile Include="Object\Character\Enemy\Enemy.cpp" />
     <ClCompile Include="Object\Character\CharaBase.cpp" />
@@ -154,6 +155,9 @@
     <ClCompile Include="Utility\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Object\Gimmick\GoalPoint.h" />
+    <ClInclude Include="Object\ObjectList.h" />
+    <ClInclude Include="Object\ObjectTypeList.h" />
     <ClInclude Include="Object\Stage\Block.h" />
     <ClInclude Include="Object\Character\Enemy\Enemy.h" />
     <ClInclude Include="Object\Character\CharaBase.h" />
