--- a/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
+++ b/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="Object\GameObject.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\SceneBase.cpp" />
+    <ClCompile Include="Object\Stage\Trap.cpp" />
     <ClCompile Include="Utility\ResourceManager.cpp" />
     <ClCompile Include="Utility\Fps.cpp" />
     <ClCompile Include="Utility\InputControl.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Object\GameObject.h" />
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\SceneBase.h" />
+    <ClInclude Include="Object\Stage\Trap.h" />
     <ClInclude Include="Utility\ResourceManager.h" />
     <ClInclude Include="Utility\Fps.h" />
     <ClInclude Include="Utility\InputControl.h" />
