--- a/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj.filters
+++ b/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Object\Stage\Trap.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Object\Stage\MoveBlock.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="common.h">
@@ -129,6 +132,9 @@
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="Object\Stage\Trap.h">
+      <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Object\Stage\MoveBlock.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
