--- a/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
+++ b/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
@@ -152,6 +152,7 @@
     <ClCompile Include="Scene\SceneManager.cpp" />
     <ClCompile Include="Scene\SceneBase.cpp" />
     <ClCompile Include="Object\Stage\Trap.cpp" />
+    <ClCompile Include="Scene\GameScene\TitleScene.cpp" />
     <ClCompile Include="Utility\ResourceManager.cpp" />
     <ClCompile Include="Utility\Fps.cpp" />
     <ClCompile Include="Utility\InputControl.cpp" />
@@ -175,6 +176,7 @@
     <ClInclude Include="Scene\SceneManager.h" />
     <ClInclude Include="Scene\SceneBase.h" />
     <ClInclude Include="Object\Stage\Trap.h" />
+    <ClInclude Include="Scene\GameScene\TitleScene.h" />
     <ClInclude Include="Utility\ResourceManager.h" />
     <ClInclude Include="Utility\Fps.h" />
     <ClInclude Include="Utility\InputControl.h" />
