--- a/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
+++ b/Leonardo_Bocchi/Leonardo_Bocchi/Leonardo_Bocchi.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Object\Character\Enemy\Enemy.cpp" />
     <ClCompile Include="Object\Character\CharaBase.cpp" />
     <ClCompile Include="Object\Character\Player\Player.cpp" />
+    <ClCompile Include="Scene\GameScene\ResultScene.cpp" />
     <ClCompile Include="Scene\GameScene\GameMainScene.cpp" />
     <ClCompile Include="Object\GameObject.cpp" />
     <ClCompile Include="Scene\SceneManager.cpp" />
@@ -171,6 +172,7 @@
     <ClInclude Include="Object\Character\CharaBase.h" />
     <ClInclude Include="common.h" />
     <ClInclude Include="Object\Character\Player\Player.h" />
+    <ClInclude Include="Scene\GameScene\ResultScene.h" />
     <ClInclude Include="Scene\GameScene\GameMainScene.h" />
     <ClInclude Include="Object\GameObject.h" />
     <ClInclude Include="Scene\SceneManager.h" />
